fix small slider alignment issue with rest of content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,6 +278,7 @@ article {
 
 .slider {
 	height: 375px !important;
+	padding: 0 .75rem !important;
 }
 
 .slider .slides {
